# rampart-agent

./: .dockerignore  .env.example  .gitignore  .npmignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  benchmark_performance.py  configure.sh  deploy.sh  docker-compose.yml  install.py  install.sh  installer.py  push.sh  pyproject.toml  requirements-dev.txt  requirements.txt  upgrade.sh
.github/workflows/: ci.yml  docker.yml  release.yml  test.yml
cli/: agent_cli.py  beijixing_cli.py  init_wizard.py  polaris_cli.py  rampart_cli.py
core/: __init__.py  agent.py  cache.py  config_manager.py  context_selector.py  entropy_audit.py  eval.py  exceptions.py  failure_attribution.py  intervention.py  logo.py  observability.py  performance.py
core/align/: __init__.py  align_guard.py  policy_engine.py  tool_auth.py
core/executor/: __init__.py  code_harness.py  dag_executor.py  retry_executor.py  sandbox_manager.py  tool_weaver.py
core/memory/: __init__.py  embedding_memory.py  episodic_memory.py  semantic_memory.py  working_memory.py
core/planner/: __init__.py  confidence.py  llm_planner.py  local_llm.py  models.py  ooda_loop.py  planner.py
core/prompts/: __init__.py  manager.py
core/prompts/templates/: ooda_act.json  ooda_decide.json  ooda_observe.json  ooda_orient.json  planner_generate.json  planner_revise.json  system_base.json
docs/: INSTALLER_GUIDE.md  product-hunt-launch.md
gateway/: __init__.py  config.py  main.py
gateway/api/: __init__.py  dependencies.py
gateway/api/v1/: __init__.py  agents.py  chat.py  health.py  tasks.py
gateway/middlewares/: __init__.py  error_handler.py  rate_limiter.py  request_logger.py  security_headers.py
gateway/security/: __init__.py  align_guard_filter.py  authenticator.py  authorizer.py
mcp/: __init__.py  client.py  protocol.py  server.py
multi_agent/blackboard/: __init__.py
multi_agent/coordinator/: __init__.py
npm/: README.md  package.json
npm/scripts/: install.sh  uninstall.sh
protocols/: __init__.py
protocols/a2a/: __init__.py  client.py  server.py  types.py
scripts/: terminal-screenshot.py
sdk/: client.py
skills/rag/: __init__.py
tests/: conftest.py
tests/integration/: test_integration.py  test_mcp_integration.py  test_tools_integration.py
tests/unit/: test_align_guard.py  test_blackboard.py  test_code_harness.py  test_config_manager.py  test_context_selector.py  test_embedding_memory.py  test_entropy_audit.py  test_executor.py  test_failure_attribution.py  test_init_wizard.py  test_intervention.py  test_logo.py  test_memory.py  test_performance.py  test_planner.py  test_retry_executor.py
tools/: __init__.py  code_tools.py  data_tools.py  file_tools.py  registry.py  system_tools.py  web_tools.py
