[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-agent"
version = "1.1.0"
description = "Polaris - Autonomous Multi-Agent Framework with OODA + MCP + A2A"
authors = [
    { name = "Polaris Team", email = "team@polaris.ai" }
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
polaris = "cli.polaris_cli:main"

[project.urls]
"Homepage" = "https://github.com/ZBcxy/polaris-agent"
"Bug Tracker" = "https://github.com/ZBcxy/polaris-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "gateway*", "multi_agent*", "skills*", "sdk*", "tools*", "mcp*", "cli*", "protocols*"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
ignore_missing_imports = true