[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rampart-agent"
version = "1.1.0"
description = "Rampart Agent — Navigate Complexity with AI. Autonomous Agent Framework with OODA Loop, MCP, A2A, and 26 built-in tools."
authors = [
    { name = "Rampart Team", email = "team@rampart.agent" }
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn~=0.34",
    "pydantic~=2.11",
    "python-multipart~=0.0.20",
    "openai~=1.102",
    "litellm~=1.75",
    "redis~=5.3",
    "python-dotenv~=1.1",
    "requests~=2.32",
    "aiohttp~=3.11",
    "httpx~=0.28",
    "pydantic-settings~=2.9",
    "python-jose[cryptography]~=3.3",
]

[project.scripts]
rampart = "cli.rampart_cli:main"

[project.urls]
"Homepage" = "https://github.com/ZBcxy/rampart-agent"
"Bug Tracker" = "https://github.com/ZBcxy/rampart-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "gateway*", "multi_agent*", "skills*", "sdk*", "tools*", "mcp*", "cli*", "protocols*"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["core", "gateway", "multi_agent", "tools", "sdk", "mcp", "cli", "protocols", "skills"]
omit = ["*/tests/*", "*/venv/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
sort = "Cover"
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
ignore_missing_imports = true
